Complete full-stack Daily Coding platform with GitHub deployment setup
- Add root package.json for project management
- Configure cross-platform environment variables with cross-env
- Update backend to serve static frontend files
- Fix API URL paths for production deployment
- Implement dynamic faculty dashboard with real-time data
- Add faculty API endpoints for student management
- Create comprehensive README with deployment instructions
- Add .gitignore and .env.example for security
- Add test scripts for backend validation
- Fix routing conflicts and static file serving
- Update frontend to use relative API URLs
- Implement authentication checks and logout functionality
- Add search and filtering to faculty dashboard

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,19 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "seed": "node seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js",
+    "build": "echo 'No build step required for this project'",
+    "heroku-postbuild": "npm run seed"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
