--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "frontend/**", "use": "@vercel/static" },
-    { "src": "api/[...proxy].js", "use": "@vercel/node" }
-  ],
+  "functions": {
+    "api/[...proxy].js": {
+      "runtime": "@vercel/node"
+    }
+  },
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/[...proxy].js" },
     { "src": "/(.*)", "dest": "/frontend/$1" }
