--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
   "functions": {
-    "api/[...proxy].js": {
+    "api/**/*.js": {
       "runtime": "@vercel/node"
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/[...proxy].js" },
     { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
 }
