--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18"
+    }
+  },
   "routes": [
     { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
